--- a/app/src/main/res/layout/submit_review.xml
+++ b/app/src/main/res/layout/submit_review.xml
@@ -140,7 +140,7 @@
         <Spinner
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner" />
+            android:id="@+id/semester_spinner" />
 
     </LinearLayout>
 
