login, department, course list page push

--- a/app/src/main/res/layout/activity_department_list.xml
+++ b/app/src/main/res/layout/activity_department_list.xml
@@ -34,10 +34,7 @@
                 android:id="@+id/navigationPicImageView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
-                />
-
-
+                android:layout_weight="5"/>
 
             <TextView
                 android:id="@+id/navigationUserNameTextView"
