--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="orange">#ffff8f22</color>
-
+    <color name="yellow">#ffee00</color>
 </resources>
